[package]
name = "key_stretcher"
version = "0.1.0"
edition = "2021"

[[bin]]
edition = "2021"
name = "key_stretcher"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.3"
hex = "0.4.3"
hex-literal = "0.3.4"
log = "0.4.17"
sha2 = "0.10.6"
